--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <title>Where Virtual Events Come Alive</title> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
